# AppleMusicStatus2Discord

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: discord_manager.cpp  discord_manager.h  main.cpp  media_info.h  media_mac.cpp  media_win.cpp
